Correct version with added will-change property

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -32,6 +32,12 @@ form {
 .mover {
   position: fixed;
   width: 256px;
+
+  /*
+    Adding the will-change property significantly reduces the amount
+    of painting that the browser has to do.
+  */
+  will-change: transform;
   z-index: -1;
 }
 
